--- a/vignettes/how_to_build_pkgdown_website.Rmd
+++ b/vignettes/how_to_build_pkgdown_website.Rmd
@@ -45,11 +45,11 @@ install.packages(c("devtools","usethis","knitr","rmarkdown", "roxygen2", "pkgdow
 
 ## Step 1: Create an R package
 
-    * In your local Rstudio, create a local R pacakge (a very simple one) with a package name whichever you want. I created a package called `TemplatePKGWebsite`. My package is located in `Documents/Github/TemplatePKGWebsite`. You can do this with two following ways:
+    * In your local Rstudio, create a local R pacakge (a very simple one) with a package name whichever you want. I created a package called `templatepkgdown`. My package is located in `Documents/Github/template_pkgdown`. You can do this with two following ways:
       - Use R code to create R package
 ```{r,eval=F}
 # setup R package structure
-usethis::create_package("TemplatePKGWebsite")
+usethis::create_package("templatepkgdown")
 ```
       - Go into Rstudio > File > New Project > New Directory > R package
         ![](./images/how_to_build_pkgdown_website/project_wizard.png).
@@ -58,24 +58,24 @@ usethis::create_package("TemplatePKGWebsite")
 
 Let's initialize the project as a git repo, commit your changes, set the remote and push to the remote. There are many ways to accomplish this which I explain in my tutorial. Here I will use the command line to accomplish this:
 
-  * Create a repository in Github. I named the repo as `TemplatePKGWebsite`
+  * Create a repository in Github. I named the repo as `templatepkgdown`
     ![](./images/how_to_build_pkgdown_website/new_repo.png)
 
   * Push the R package folder to my remote repository.
 
 ```console
-cd Documents/Github/TemplatePKGWebsite
+cd Documents/Github/templatepkgdown
 git status
 git add --all
 git commit -m "initial version of the R package"
 git branch -M main
-git remote add origin https://github.com/username/TemplatePKGWebsite.git
+git remote add origin https://github.com/username/templatepkgdown.git
 git push origin main
 ```
 
 ## Step 3: Initialize website using pkgdown
 
-With the below line of code, it will automatically pop-up a website for the package `TemplatePKGWebsite`. This will create `/docs` folder in the root of your package directory which contains all the source files for your website.
+With the below line of code, it will automatically pop-up a website for the package `templatepkgdown`. This will create `/docs` folder in the root of your package directory which contains all the source files for your website.
 ```{r, eval=F}
 # Run to build the website
 pkgdown::build_site()
@@ -114,11 +114,20 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ```
-Then, create a `.gitignore` file in the root of the directory with the following two lines:
+Then, create a `.gitignore` file in the root of the directory with the following lines. *Note* DO NOT add `docs` in the `.gitignore`, it would cause broken link in vignettes.
 ```console
-TemplatePKGWebsite.Rproj
+.Rproj.user
+.Rhistory
+.RData
+.Ruserdata
+inst/doc
+.Rdata
+.httr-oauth
+.DS_Store
+templatepkgdown.Rproj
 .Rproj*
 ```
+
 Let's check how the website looks like now. Note that now `article` and `changelog` tab has been added.
 ```{r, eval=F}
 # This will automatically open up your web browser with the built website
@@ -142,7 +151,7 @@ Then head over to the Settings on your GitHub repo and scroll to the GitHub Page
 
 ![](./images/how_to_build_pkgdown_website/publish.png).
 
-Your website is on live now on this address: `https://username.github.io/TemplatePKGWebsite/`.
+Your website is on live now on this address: `https://username.github.io/templatepkgdown/`.
 
 ## Step 6: Update your website
 
